--- a/cv/index.html
+++ b/cv/index.html
@@ -4,131 +4,145 @@
 
 	<title>Matias Gimenez | Frontend & Backend Developer | matias.gimenez@gmail.com</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
+	
 	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
-	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
+	<meta name="description" content="" /> 
+	<link rel="stylesheet" type="text/css" href="base.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="styles.css" media="all" />
 
 </head>
 <body>
-
-<div id="doc2" class="yui-t7">
-	<div id="inner">
-	
-		<div id="hd">
-			<div class="yui-gc">
-				<div class="yui-u first">
-					<h1>Matias Gimenez</h1>
-					<h2>Frontend & Backend Developer</h2>
+	<div class="container">
+		<header>
+			<div class="content-data">
+				<img src="pic.jpg" alt="Photo" />
+				<div class="content-me">
+					<h1>MATIAS GIMENEZ</h1>
+					<h2>Frontend Developer</h2>
 				</div>
-
-				<div class="yui-u">
-					<div class="contact-info">
-						<h3><a id="pdf" href="http://www.linkedin.com/pub/matias-gimenez/15/297/aa8" target="_blank">Linked in</a></h3>
-						<h3><a href="mailto:matias.gimenez@gmail.com">matias.gimenez@gmail.com</a></h3>
-						<h3>(+54) - 15 3 282-9461</h3>
-					</div><!--// .contact-info -->
+			</div>
+			<div class="contact-info">
+				<h3><a href="http://www.linkedin.com/pub/matias-gimenez/15/297/aa8" target="_blank">Linked in</a></h3>
+				<h3><a href="#" target="_blank">Twitter</a></h3>
+				<h3><a href="mailto:matias.gimenez@gmail.com">matias.gimenez@gmail.com</a></h3>
+				<h3>(+54) - 15 3 282-9461</h3>
+			</div>
+			
+		</header>
+		<main>
+			<article>
+				<h2>Perfil</h2>
+				<p class="content-right">
+					Graduado en Escuela Multimedial Da Vinci, en agosto de 2010 con titulo de "Diseñador y Administrador de Sitios Web con orientación en Programación".
+					Actualmente soy Frontend Developer en MercadoLibre en el area de Experiencia de Usuario. Además realizo trabajos freelance tanto para comercios como para empresas.
+				</p>
+			</article>
+			<article>	
+				<h2>Conocimientos Técnicos</h2>
+				<div class="skills content-right">
+					<ul>
+						<li>Semantic HTML 5</li>
+						<li>CSS 3</li>
+						<li>Responsive Web Design</li>
+					</ul>
+					<ul>
+						<li>Vanilla Javascript</li>
+						<li>jQuery/jQuery UI</li>
+					</ul>
+					<ul>
+						<li>PHP / Code Igniter</li>
+						<li>My Sql</li>
+						<li>GIT</li>
+					</ul>
 				</div>
-			</div><!--// .yui-gc -->
-		</div><!--// hd -->
+			</article>
+			<article class="work-experience">
+				<h2>Experiencia</h2>
+				<div class="content-right">
+					<div class="job">
+						<h2>Mercadolibre</h2>
+						<h3>Frontend Developer UI/UX</h3>
+						<h4>08/2012-01/2015</h4>
+						<ul>
+							<li>Semantic HTML5</li>
+							<li>CSS3</li>
+							<li>Vanilla JavaScript / jQuery</li>
+							<li>Chico UI (JS Framework)</li>
+							<li>Desarrollo de componentes y librerías</li>
+							<li>Progressive Enhancement</li>
+							<li>Responsive Web Design</li>
+							<li>GIT</li>
+							<li>Frontend Meetups</li>
+						</ul>
+					</div>
 
-		<div id="bd">
-			<div id="yui-main">
-				<div class="yui-b">
+					<div class="job">
+						<h2>8a Marketing Comunicacion y Diseño</h2>
+						<h3>Implementador Web</h3>
+						<h4>06/2011-08/2012</h4>
+						<ul>
+							<li>Semantic HTML</li>
+							<li>CSS</li>
+							<li>jQuery / jQuery UI</li>
+							<li>PHP, CodeIgniter, My Sql</li>
+							<li>Piezas de mail, newsletters</li>
+						</ul>
+					</div>
 
-					<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Perfil</h2>
-						</div>
-						<div class="yui-u">
-							<p class="enlarge">
-								Graduado en Escuela Multimedial Da Vinci, en agosto de 2010 con titulo de "Diseñador y Administrador de Sitios Web con orientación en Programación".
-								Actualmente soy un desarrollador web de 27 años de edad que trabaja en Palermo, Ciudad de Buenos Aires. Además realizo trabajos freelance ya sea para comercios como para empresas.
-							</p>
-						</div>
-					</div><!--// .yui-gf -->
+					<div class="job">
+						<h2>Joptiwebs</h2>
+						<h3>Desarrollo Freelance</h3>
+						<h4>2010-Actual</h4>
+						<p>Sitios Corporativos, institucionales, desarrollo de portales en Drupal.</p>
+					</div>
+				</div>
+			</article>
+			<article class="studies">
+				<h2>Estudios</h2>
+				<div class="content-right">
+					<div class="college">
+						<h2>03/2008-08/2010 Escuela Multimedial Da Vinci</h2>
+						<h3>Diseñador y Administrador de Sitios Web con orientación en Programación</h3>
+						<ul>
+							<li>Photoshop, Illustrator, Flash.</li>
+							<li>HTML - XHTML / CSS 2.1</li>
+							<li>Javascript / Jquery</li>
+							<li>PHP5 - MVC / Doctrine Framework / Zend Framework</li>
+							<li>MySQL</li>
+							<li>WAMP</li>
+						</ul>
+					</div>
 
-					
+					<div class="college">
+						<h2>2004–2005 Universidad Tecnologica Nacional</h2>
+						<h3>Técnico Superior en Programación</h3>
+						<ul>
+							<li>Materias aprobadas: 11/20.</li>
+							<li>Estructura de los sistemas inforticos, Funciones del S.O.</li>
+							<li>Seguridad informática (Antivirus, Firewall, Spy, Spam, etc.)</li>
+							<li>Mantenimiento optimo de una PC.</li>
+							<li>Estructura de una PC, Micropocesadores, Memorias, Periféricos.</li>
+							<li>C y C++</li>
+							<li>1997–2002 Escuela Técnica Reconquista de BsAs. No 29 D.E. 6°</li>
+						</ul>
+					</div>
 
-					<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Conocimientos Técnicos</h2>
-						</div>
-						<div class="yui-u">
-							<ul class="talent">
-								<li>xHTML/HTML 5</li>
-								<li>CSS</li>
-								<li class="last">HTML</li>
-							</ul>
-
-							<ul class="talent">
-								<li>Jquery/Jquery UI</li>
-								<li>PHP</li>
-								<li class="last">My Sql</li>
-							</ul>
-
-							<ul class="talent">
-								<li>Drupal</li>
-								<li>Code Igniter</li>
-								<li class="last">Social Media</li>
-							</ul>
-						</div>
-					</div><!--// .yui-gf-->
-
-					<div class="yui-gf">
-	
-						<div class="yui-u first">
-							<h2>Experiencia</h2>
-						</div><!--// .yui-u -->
-
-						<div class="yui-u">
-
-							<div class="job">
-								<h2>8a Marketing Comunicacion y Diseño</h2>
-								<h3>Implementador Web</h3>
-								<h4>2011-Actual</h4>
-								<p>Maquetado HTML/CSS, Jquery, PHP, My Sql</p>
-							</div>
-
-							<div class="job last">
-								<h2>Joptiwebs</h2>
-								<h3>Desarrollo Freelance</h3>
-								<h4>2010-Actual</h4>
-								<p>Sitios Corporativos, institucionales, desarrollo de portales en Drupal.</p>
-							</div>
-
-
-
-						</div><!--// .yui-u -->
-					</div><!--// .yui-gf -->
-
-
-					<div class="yui-gf last">
-						<div class="yui-u first">
-							<h2>Estudios</h2>
-						</div>
-						<div class="yui-u">
-							<h2>Escuela Multimedial Da Vinci</h2>
-							<h3>Diseñador y Administrador de Sitios Web con orientación en Programación</h3>
-						</div>
-					</div><!--// .yui-gf -->
-
-
-				</div><!--// .yui-b -->
-			</div><!--// yui-main -->
-		</div><!--// bd -->
-
-		<div id="ft">
+					<div class="college">
+						<h2>Reconquista de Buenos Aires (Secundario)</h2>
+						<h3>Técnico en Computación</h3>
+						<ul>
+							<li>C y C++</li>
+							<li>Visual Basic</li>
+							<li>Fox Pro</li>
+						</ul>
+					</div>
+				</div>
+			</article>
+		</main>
+		<footer>
 			<p>Matias Gimenez &mdash; <a href="mailto:matias.gimenez@gmail.com">matias.gimenez@gmail.com</a> &mdash; (+54) - 15 3 282 9461</p>
-		</div><!--// footer -->
-
-	</div><!-- // inner -->
-
-
-</div><!--// doc -->
-
+		</footer>
+	</div>
 
 </body>
 </html>
