--- a/cv/index.html
+++ b/cv/index.html
@@ -15,17 +15,22 @@
 	<div class="container">
 		<header>
 			<div class="content-data">
-				<img src="pic.jpg" alt="Photo" />
+				<img src="images/pic.jpg" alt="Photo" />
 				<div class="content-me">
 					<h1>MATIAS GIMENEZ</h1>
 					<h2>Frontend Developer</h2>
 				</div>
 			</div>
 			<div class="contact-info">
-				<h3><a href="http://www.linkedin.com/pub/matias-gimenez/15/297/aa8" target="_blank">Linked in</a></h3>
-				<h3><a href="#" target="_blank">Twitter</a></h3>
-				<h3><a href="mailto:matias.gimenez@gmail.com">matias.gimenez@gmail.com</a></h3>
-				<h3>(+54) - 15 3 282-9461</h3>
+				<ul>
+					<li>
+						<a href="http://www.linkedin.com/pub/matias-gimenez/15/297/aa8" target="_blank"><i class="ico-social ico-linkedin">Linked in</i></a>
+						<a href="https://twitter.com/jopti" target="_blank"><i class="ico-social ico-twitter">Linked in</i></a>
+					</li>
+					<li><a href="mailto:matias.gimenez@gmail.com">matias.gimenez@gmail.com</a></li>
+					<li>(+54) - 15 3 282-9461</li>
+					<li class="link-doc"><a href="cv-matias-gimenez.docx">Descargar en formato Word</a></li>
+				</ul>
 			</div>
 			
 		</header>
@@ -42,12 +47,13 @@
 				<div class="skills content-right">
 					<ul>
 						<li>Semantic HTML 5</li>
-						<li>CSS 3</li>
+						<li>CSS 3 / OOCSS</li>
 						<li>Responsive Web Design</li>
 					</ul>
 					<ul>
 						<li>Vanilla Javascript</li>
 						<li>jQuery/jQuery UI</li>
+						<li>Progressive Enhancement</li>
 					</ul>
 					<ul>
 						<li>PHP / Code Igniter</li>
@@ -59,10 +65,10 @@
 			<article class="work-experience">
 				<h2>Experiencia</h2>
 				<div class="content-right">
-					<div class="job">
+					<div class="job box-content">
 						<h2>Mercadolibre</h2>
 						<h3>Frontend Developer UI/UX</h3>
-						<h4>08/2012-01/2015</h4>
+						<h4 class="job-date">08/2012-01/2015</h4>
 						<ul>
 							<li>Semantic HTML5</li>
 							<li>CSS3</li>
@@ -76,10 +82,10 @@
 						</ul>
 					</div>
 
-					<div class="job">
+					<div class="job box-content">
 						<h2>8a Marketing Comunicacion y Diseño</h2>
 						<h3>Implementador Web</h3>
-						<h4>06/2011-08/2012</h4>
+						<h4 class="job-date">06/2011-08/2012</h4>
 						<ul>
 							<li>Semantic HTML</li>
 							<li>CSS</li>
@@ -89,10 +95,10 @@
 						</ul>
 					</div>
 
-					<div class="job">
+					<div class="job box-content">
 						<h2>Joptiwebs</h2>
 						<h3>Desarrollo Freelance</h3>
-						<h4>2010-Actual</h4>
+						<h4 class="job-date">2010-Actual</h4>
 						<p>Sitios Corporativos, institucionales, desarrollo de portales en Drupal.</p>
 					</div>
 				</div>
@@ -100,7 +106,7 @@
 			<article class="studies">
 				<h2>Estudios</h2>
 				<div class="content-right">
-					<div class="college">
+					<div class="college box-content">
 						<h2>03/2008-08/2010 Escuela Multimedial Da Vinci</h2>
 						<h3>Diseñador y Administrador de Sitios Web con orientación en Programación</h3>
 						<ul>
@@ -113,7 +119,7 @@
 						</ul>
 					</div>
 
-					<div class="college">
+					<div class="college box-content">
 						<h2>2004–2005 Universidad Tecnologica Nacional</h2>
 						<h3>Técnico Superior en Programación</h3>
 						<ul>
@@ -127,7 +133,7 @@
 						</ul>
 					</div>
 
-					<div class="college">
+					<div class="college box-content">
 						<h2>Reconquista de Buenos Aires (Secundario)</h2>
 						<h3>Técnico en Computación</h3>
 						<ul>
