--- a/cv/index.html
+++ b/cv/index.html
@@ -49,16 +49,19 @@
 						<li>Semantic HTML 5</li>
 						<li>CSS 3 / OOCSS</li>
 						<li>Responsive Web Design</li>
+						<li>Fireworks</li>
 					</ul>
 					<ul>
 						<li>Vanilla Javascript</li>
 						<li>jQuery/jQuery UI</li>
-						<li>Progressive Enhancement</li>
+						<li>DOM / AJAX / JSON</li>
+						<li>Photoshop</li>
 					</ul>
 					<ul>
 						<li>PHP / Code Igniter</li>
 						<li>My Sql</li>
 						<li>GIT</li>
+						<li>Ilustrator</li>
 					</ul>
 				</div>
 			</article>
