--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Matias Gimenez | Frontend & Backend Developer | matias.gimenez@gmail.com</title>
+	<title>Matias Gimenez | Frontend Developer | matias.gimenez@gmail.com</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	
 	<meta name="keywords" content="" />
