--- a/cv/index-en.html
+++ b/cv/index-en.html
@@ -29,14 +29,14 @@
 					</li>
 					<li><a href="mailto:matias.gimenez@gmail.com">matias.gimenez@gmail.com</a></li>
 					<li>(+54) - 15 3 282-9461</li>
-					<li class="link-doc"><a href="cv-matias-gimenez.docx">Descargar en formato Word</a></li>
+					<li class="link-doc"><a href="cv-matias-gimenez.docx">Download on Word format</a></li>
 				</ul>
 			</div>
 			
 		</header>
 		<main>
 			<article>
-				<h2>Perfil</h2>
+				<h2>Profile</h2>
 				<div class="content-right">
 					<p>I'm a web designer oriented frontend. Da Vinci School graduate in 2010, I have worked in various high traffic websites as MercadoLibre, DeAutos, in which I could gain experience in UI / UX development considering the performance as much as the code semantics.</p>
 					<p>Since 2010 I work as a freelance in developing web sites and applications meeting the deadlines and ensuring proper operation.</p>
@@ -48,7 +48,7 @@
 				</div>
 			</article>
 			<article>	
-				<h2>Conocimientos Técnicos</h2>
+				<h2>Skills</h2>
 				<div class="skills content-right">
 					<ul>
 						<li>Semantic HTML 5</li>
@@ -77,7 +77,7 @@
 				</div>
 			</article>
 			<article class="work-experience">
-				<h2>Experiencia</h2>
+				<h2>Experience</h2>
 				<div class="content-right">
 					<div class="job box-content">
 						<h2>Eulas</h2>
@@ -121,7 +121,7 @@
 							<li>CSS3</li>
 							<li>Vanilla JavaScript / jQuery</li>
 							<li>Chico UI (JS Framework)</li>
-							<li>Desarrollo de componentes y librerías</li>
+							<li>Components & Libraries Development</li>
 							<li>Progressive Enhancement</li>
 							<li>Responsive Web Design</li>
 							<li>GIT</li>
@@ -132,23 +132,23 @@
 
 					<div class="job box-content">
 						<h2>8a Marketing Comunicacion y Diseño</h2>
-						<h3>Implementador Web</h3>
+						<h3>Web Implementer</h3>
 						<h4 class="job-date">06/2011-08/2012</h4>
 						<ul>
 							<li>Semantic HTML</li>
 							<li>CSS</li>
 							<li>jQuery / jQuery UI</li>
 							<li>PHP, CodeIgniter, My Sql</li>
-							<li>Piezas de mail, newsletters</li>
+							<li>Newsletters</li>
 						</ul>
 					</div>
 
 					<div class="job box-content">
 						<h2>Joptiwebs</h2>
-						<h3>Desarrollo Freelance</h3>
-						<h4 class="job-date">2010-Actual</h4>
+						<h3>Freelance Development</h3>
+						<h4 class="job-date">2010-Current</h4>
 						<ul>
-							<li>Sitios Corporativos, institucionales, desarrollo de portales en Drupal.</li>
+							<li>Corporative Sites, Institutional, Drupal Development.</li>
 							<li>Semantic HTML</li>
 							<li>CSS / CSS3 / SASS</li>
 							<li>JS / jQuery / jQuery UI</li>
@@ -162,7 +162,7 @@
 				<div class="content-right">
 					<div class="college box-content">
 						<h2>Escuela Multimedial Da Vinci</h2>
-						<h3>Diseñador y Administrador de Sitios Web con orientación en Programación</h3>
+						<h3>Designer & Manager Web sites oriented programming</h3>
 						<h4 class="job-date">03/2008-08/2010</h4>
 						<ul>
 							<li>Photoshop, Illustrator, Flash.</li>
@@ -176,24 +176,24 @@
 
 					<div class="college box-content">
 						<h2>Universidad Tecnologica Nacional</h2>
-						<h3>Técnico Superior en Programación</h3>
+						<h3>Technician in Programming</h3>
 						<h4 class="job-date">03/2004–08/2005</h4>
 						<ul>
-							<li>Materias aprobadas: 11/20.</li>
-							<li>Estructura de los sistemas informaticos, Funciones del S.O.</li>
-							<li>Seguridad informática (Antivirus, Firewall, Spy, Spam, etc.)</li>
-							<li>Mantenimiento optimo de una PC.</li>
-							<li>Estructura de una PC, Micropocesadores, Memorias, Periféricos.</li>
-							<li>C y C++</li>
+							<li>Approved subjects: 11/20.</li>
+							<li>Structure of computer systems, Features OS</li>
+							<li>Computer Security (Antivirus, Firewall, Spy, Spam, etc.)</li>
+							<li>Maintain an optimal PC.</li>
+							<li>Structure of a PC, Micropocesadores, Memories, Peripherals.</li>
+							<li>C & C++</li>
 						</ul>
 					</div>
 
 					<div class="college box-content">
-						<h2>Escuela Técnica Reconquista de BsAs (Secundario)</h2>
-						<h3>Técnico en Computación</h3>
+						<h2>Technical School Reconquista de BsAs. (High School)</h2>
+						<h3>Computer technician</h3>
 						<h4 class="job-date">1997–2002</h4>
 						<ul>
-							<li>C y C++</li>
+							<li>C & C++</li>
 							<li>Visual Basic</li>
 							<li>Fox Pro</li>
 						</ul>
