--- a/cv/index.html
+++ b/cv/index.html
@@ -52,17 +52,19 @@
 				<div class="skills content-right">
 					<ul>
 						<li>Semantic HTML 5</li>
-						<li>CSS 3 / COMPASS</li>
+						<li>CSS 3 / SASS</li>
 						<li>Vanilla Javascript</li>
 						<li>jQuery / jQuery UI</li>
 						<li>Responsive Web Design</li>
 						<li>Progressive Enhancement</li>
+						<li>Accessibility / WAI-ARIA</li>
 					</ul>
 					<ul>
 						<li>UX / UI Development</li>
 						<li>DOM / AJAX / JSON</li>
 						<li>Grunt</li>
-						<li>WPO</li>
+						<li>NPM Modules</li>
+						<li>Web Performance Optimization</li>
 						<li>APIs</li>
 						<li>GIT</li>
 					</ul>
