--- a/cv/index.html
+++ b/cv/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!doctype html>
 <html>
 <head>
-
-	<title>Matias Gimenez | Frontend Developer | matias.gimenez@gmail.com</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="Matias Gimenez Frontend Developer, Profile, Skills, Works, Education">
+	<meta name="keywords" content="Matias Gimenez, Frontend Developer, Web Development, Web Design, HTML, Javascript, CSS" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<meta name="keywords" content="" />
-	<meta name="description" content="" /> 
+	<title>Matias Gimenez | Frontend Developer | matias.gimenez@gmail.com</title>
 	<link rel="stylesheet" type="text/css" href="base.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="styles.css" media="all" />
-
 </head>
 <body>
 	<div class="container">
