--- a/profile/index.html
+++ b/profile/index.html
@@ -59,15 +59,18 @@
             <section id="contact" class="contact">
                 <h2 class="title-section">Contact,</h2>
                 <ul>
-                    <li class="icon-icon-phone">
+                    <li>
+                        <i class="icon-icon-phone"></i>
                         <p>PHONE</p>
                         <p>(+54) 15 3 282 9461</p>
                     </li>
-                    <li class="icon-icon-location">
+                    <li>
+                        <i class="icon-icon-location"></i>
                         <p>LOCATION</p>
-                        <p>BS AS ARG.</p>
+                        <p>Bs As Arg.</p>
                     </li>
-                    <li class="icon-icon-mail">
+                    <li>
+                        <i class="icon-icon-mail"></i>
                         <p>EMAIL</p>
                         <p>matias.gimenez@gmail.com</p>
                     </li>
@@ -95,7 +98,7 @@
 
                         to = sectionElement.offsetTop;
 
-                        console.log(to);
+                        // console.log(to);
 
                       scrollTo(main, to, 500);
                     }
