--- a/cv/index-es.html
+++ b/cv/index-es.html
@@ -29,7 +29,7 @@
 					</li>
 					<li><a href="mailto:matias.gimenez@gmail.com">matias.gimenez@gmail.com</a></li>
 					<li>(+54) - 15 3 282-9461</li>
-					<li class="link-doc"><a href="cv-matias-gimenez.docx">Descargar en formato Word</a></li>
+					<li class="link-doc"><a href="cv-mgimenez-es.pdf">Descargar en PDF</a></li>
 				</ul>
 			</div>
 			
@@ -38,10 +38,13 @@
 			<article>
 				<h2>Perfil</h2>
 				<div class="content-right">
-					<p>I'm a web designer oriented frontend. Da Vinci School graduate in 2010, I have worked in various high traffic websites as MercadoLibre, DeAutos, in which I could gain experience in UI / UX development considering the performance as much as the code semantics.</p>
-					<p>Since 2010 I work as a freelance in developing web sites and applications meeting the deadlines and ensuring proper operation.</p>
-					<p>I also work as employees in Eulas where I am part of a team of 10 people developing e-commerce webapp for different brands.</p>
-					<p>Passionate about technology, I'm continually increasing my knowledge to keep me updated.</p>
+					<p>Soy diseñador web orientado a frontend. Termine de estudiar en 2010 en Escuela Da Vinci.</p>
+
+					<p>Trabaje en varios sitios web de gran trafico como Mercadolibre y Deautos en los cuales pude ganar experiencia en desarrollo UI / UX considerando tanto la performance como la semántica en el código.</p>
+
+					<p>Desde 2010 trabajo como freelance en el desarrollo de sitios y aplicaciones web cumpliendo tiempos de entrega y asegurando un correcto funcionamiento.</p>
+
+					<p>Además, soy empleado de Eulas donde soy parte de un equipo de 10 personas desarrollando webapps E-Commerce para diferentes brands.</p>
 				</div>
 			</article>
 			<article>	
