--- a/cv/index.html
+++ b/cv/index.html
@@ -29,7 +29,7 @@
 					</li>
 					<li><a href="mailto:matias.gimenez@gmail.com">matias.gimenez@gmail.com</a></li>
 					<li>(+54) - 15 3 282-9461</li>
-					<li class="link-doc"><a href="cv-mgimenez.pdf">Download on PDF</a></li>
+					<li class="link-doc"><a href="cv-mgimenez.pdf" target="_blank">Download on PDF</a></li>
 				</ul>
 			</div>
 			
