--- a/profile/src/index.html
+++ b/profile/src/index.html
@@ -25,7 +25,7 @@
         <main>
             <section id="home" class="home">
                 <h2>I am a professional web designer & <br/>frontend developer</h2>
-                <h5>web standars, performance, accesibility, webapps</h5>
+                <h5>semantic, performant & accesibile webapps</h5>
                 <a href="https://ar.linkedin.com/in/gimenezmatias" target="_blank" class="icon-icon-li">Linkedin</a>
                 <a href="https://twitter.com/jopti" target="_blank" class="icon-icon-tw">Twitter</a>
             </section>
