update profile cv

--- a/cv/index-es.html
+++ b/cv/index-es.html
@@ -39,12 +39,10 @@
 				<h2>Perfil</h2>
 				<div class="content-right">
 					<p>Soy diseñador web orientado a frontend. Termine de estudiar en 2010 en Escuela Da Vinci.</p>
-
-					<p>Trabaje en varios sitios web de gran trafico como Mercadolibre y Deautos en los cuales pude ganar experiencia en desarrollo UI / UX considerando tanto la performance como la semántica en el código.</p>
-
+					<p>Trabaje en varios sitios web de gran tráfico como Mercadolibre y Deautos en los cuales pude ganar experiencia en desarrollo UI / UX considerando tanto la performance como la semántica en el código.</p>
 					<p>Desde 2010 trabajo como freelance en el desarrollo de sitios y aplicaciones web cumpliendo tiempos de entrega y asegurando un correcto funcionamiento.</p>
-
-					<p>Además, soy empleado de Eulas donde soy parte de un equipo de 10 personas desarrollando webapps E-Commerce para diferentes brands.</p>
+					<p>Además, soy empleado de Eulas donde integro un equipo de 10 personas desarrollando webapps E-Commerce para diferentes brands.</p>
+					<p>Mi pasión por la tecnología se extiende mucho más allá de las exigencias del día a día de mi trabajo, mantengo una vigilancia constante sobre las nuevas tendencias, por lo que siempre estoy informado sobre los últimos avances, con el objetivo de garantizar que la calidad y el alcance de mi trabajo siempre se estên expandiendo.</p>
 				</div>
 			</article>
 			<article>	
