--- a/cv/index.html
+++ b/cv/index.html
@@ -38,10 +38,13 @@
 			<article>
 				<h2>Profile</h2>
 				<div class="content-right">
-					<p>I'm a web designer oriented frontend. Da Vinci School graduate in 2010, I have worked in various high traffic websites as MercadoLibre, DeAutos, in which I could gain experience in UI / UX development considering the performance as much as the code semantics.</p>
-					<p>Since 2010 I work as a freelance in developing web sites and applications meeting the deadlines and ensuring proper operation.</p>
-					<p>I also work as employees in Eulas where I am part of a team of 10 people developing e-commerce webapp for different brands.</p>
-					<p>Passionate about technology, I'm continually increasing my knowledge to keep me updated.</p>
+					<p>I'm a front-end oriented Web Designer and Da Vinci School graduate (2010) who has worked for various high traffic websites, most notably MercadoLibre and DeAutos, where I gained significant first-hand experience in UI/UX development, with equal emphasis on performance and code semantics.</p>
+
+					<p>Since 2010, I have worked as a freelancer, developping sites and applications web meeting tight, high-pressure deadlines while ensuring consistent operation.</p>
+
+					<p>I am also employed of Eulas in where I'm integral part of 10-person team, which develops E-Commerce web apps for multiple brands.</p>
+
+					<p>My passion for technology extends far beyond the day-to-day demands of my work: I keep a constant eye on emerging trends in the field, so that I'm always updated on the latest advances, with the goal of ensuring that the quality and scope of my work are always expanding.</p>
 				</div>
 			</article>
 			<article>	
