profile site updates

--- a/profile/src/index.html
+++ b/profile/src/index.html
@@ -28,12 +28,15 @@
                 <h5>semantic, performant & accesibile webapps</h5>
                 <a href="https://ar.linkedin.com/in/gimenezmatias" target="_blank" class="icon-icon-li">Linkedin</a>
                 <a href="https://twitter.com/jopti" target="_blank" class="icon-icon-tw">Twitter</a>
+                <a href="https://github.com/mgimenez" target="_blank" class="icon-icon-github">GitHub</a>
+                <a href="https://mgimenez.github.io/joptiwebs/cv/" target="_blank" class="icon-icon-profile">CV</a>
             </section>
             <section id="resume" class="resume">
                 <h2 class="title-section">Hello,</h2>
                 <h3>my name is Matias Gimenez, I love frontend development,<br/> UI / UX interactions, & innovate with new technologies.</h3>
-                <p>Since 2010 I work as a freelance in developing web sites and applications meeting the deadlines and ensuring proper operation.</p>
-                <p>Passionate about technology, I'm continually increasing my knowledge to keep me updated.</p>
+                <p>Since 2010, I have worked as a freelancer, developping sites and applications web meeting tight, high-pressure deadlines while ensuring consistent operation.</p>
+
+                <p>My passion for technology extends far beyond the day-to-day demands of my work: I keep a constant eye on emerging trends in the field, so that I'm always updated on the latest advances, with the goal of ensuring that the quality and scope of my work are always expanding.</p>
 
             </section>
             <section id="skills" class="skills">
