--- a/cv/index.html
+++ b/cv/index.html
@@ -32,7 +32,7 @@
 					<li class="link-doc"><a href="cv-mgimenez.pdf" target="_blank">Download on PDF</a></li>
 				</ul>
 			</div>
-			
+
 		</header>
 		<main>
 			<article>
@@ -42,12 +42,12 @@
 
 					<p>Since 2010, I have worked as a freelancer, developping sites and applications web meeting tight, high-pressure deadlines while ensuring consistent operation.</p>
 
-					<p>I am also employed of Eulas in where I'm integral part of 10-person team, which develops E-Commerce web apps for multiple brands.</p>
+					<p>I am also employed of R/GA Buenos Aires in where we work in contact with offices of differents countries developing web-apps for multiple brands.</p>
 
 					<p>My passion for technology extends far beyond the day-to-day demands of my work: I keep a constant eye on emerging trends in the field, so that I'm always updated on the latest advances, with the goal of ensuring that the quality and scope of my work are always expanding.</p>
 				</div>
 			</article>
-			<article>	
+			<article>
 				<h2>Skills</h2>
 				<div class="skills content-right">
 					<ul>
@@ -82,9 +82,30 @@
 				<h2>Experience</h2>
 				<div class="content-right">
 					<div class="job box-content">
+						<h2>R/GA</h2>
+						<h3>Software Engineer, Web Platforms</h3>
+						<h4 class="job-date">08/2016-Current</h4>
+						<ul>
+							<li>Semantic HTML5</li>
+							<li>CSS3 / COMPASS</li>
+							<li>Vanilla JavaScript / ES6</li>
+							<li>ReactJS</li>
+							<li>Angular 1</li>
+							<li>jQuery</li>
+							<li>Handlebars</li>
+							<li>PUG (Jade)</li>
+							<li>Frontend Improvements</li>
+							<li>Google Apis</li>
+							<li>Grunt</li>
+							<li>Responsive Web Design</li>
+							<li>JBoss</li>
+							<li>GIT</li>
+						</ul>
+					</div>
+					<div class="job box-content">
 						<h2>Eulas</h2>
 						<h3>Frontend Developer UI/UX</h3>
-						<h4 class="job-date">05/2015-Actual</h4>
+						<h4 class="job-date">05/2015-07/2016</h4>
 						<ul>
 							<li>Semantic HTML5</li>
 							<li>CSS3 / COMPASS</li>
