--- a/cv/index-es.html
+++ b/cv/index-es.html
@@ -32,7 +32,7 @@
 					<li class="link-doc"><a href="cv-mgimenez-es.pdf" target="_blank">Descargar en PDF</a></li>
 				</ul>
 			</div>
-			
+
 		</header>
 		<main>
 			<article>
@@ -41,11 +41,11 @@
 					<p>Soy diseñador web orientado a frontend. Termine de estudiar en 2010 en Escuela Da Vinci.</p>
 					<p>Trabaje en varios sitios web de gran tráfico como Mercadolibre y Deautos en los cuales pude ganar experiencia en desarrollo UI / UX considerando tanto la performance como la semántica en el código.</p>
 					<p>Desde 2010 trabajo como freelance en el desarrollo de sitios y aplicaciones web cumpliendo tiempos de entrega y asegurando un correcto funcionamiento.</p>
-					<p>Además, soy empleado de Eulas donde integro un equipo de 10 personas desarrollando webapps E-Commerce para diferentes brands.</p>
+					<p>Además, soy empleado de R/GA donde trabajamos en conjunto con equipos de diferentes paises desarrollando web-apps para diferentes marcas.</p>
 					<p>Mi pasión por la tecnología se extiende mucho más allá de las exigencias del día a día de mi trabajo, mantengo una vigilancia constante sobre las nuevas tendencias, por lo que siempre estoy informado sobre los últimos avances, con el objetivo de garantizar que la calidad y el alcance de mi trabajo siempre se estên expandiendo.</p>
 				</div>
 			</article>
-			<article>	
+			<article>
 				<h2>Conocimientos Técnicos</h2>
 				<div class="skills content-right">
 					<ul>
@@ -80,9 +80,30 @@
 				<h2>Experiencia</h2>
 				<div class="content-right">
 					<div class="job box-content">
+						<h2>R/GA</h2>
+						<h3>Software Engineer, Web Platforms</h3>
+						<h4 class="job-date">08/2016-Actual</h4>
+						<ul>
+							<li>Semantic HTML5</li>
+							<li>CSS3 / COMPASS</li>
+							<li>Vanilla JavaScript / ES6</li>
+							<li>ReactJS</li>
+							<li>Angular 1</li>
+							<li>jQuery</li>
+							<li>Handlebars</li>
+							<li>PUG (Jade)</li>
+							<li>Frontend Improvements</li>
+							<li>Google Apis</li>
+							<li>Grunt</li>
+							<li>Responsive Web Design</li>
+							<li>JBoss</li>
+							<li>GIT</li>
+						</ul>
+					</div>
+					<div class="job box-content">
 						<h2>Eulas</h2>
 						<h3>Frontend Developer UI/UX</h3>
-						<h4 class="job-date">05/2015-Actual</h4>
+						<h4 class="job-date">05/2015-07/2016</h4>
 						<ul>
 							<li>Semantic HTML5</li>
 							<li>CSS3 / COMPASS</li>
