updating cv html

--- a/cv/index-es.html
+++ b/cv/index-es.html
@@ -18,7 +18,7 @@
 				<img src="images/pic.jpg" alt="Photo" />
 				<div class="content-me">
 					<h1>MATIAS GIMENEZ</h1>
-					<h2>Frontend Developer</h2>
+					<h2>Software Engineer</h2>
 				</div>
 			</div>
 			<div class="contact-info">
@@ -41,7 +41,7 @@
 					<p>Soy diseñador web orientado a frontend. Termine de estudiar en 2010 en Escuela Da Vinci.</p>
 					<p>Trabaje en varios sitios web de gran tráfico como Mercadolibre y Deautos en los cuales pude ganar experiencia en desarrollo UI / UX considerando tanto la performance como la semántica en el código.</p>
 					<p>Desde 2010 trabajo como freelance en el desarrollo de sitios y aplicaciones web cumpliendo tiempos de entrega y asegurando un correcto funcionamiento.</p>
-					<p>Además, soy empleado de R/GA donde trabajamos en conjunto con equipos de diferentes paises desarrollando web-apps para diferentes marcas.</p>
+					<p>Actualmente estoy trabajando en Modus Agency creando productos digitales para companias estadounidenses. Diferentes tecnologías en función de los requerimientos de los clientes.</p>
 					<p>Mi pasión por la tecnología se extiende mucho más allá de las exigencias del día a día de mi trabajo, mantengo una vigilancia constante sobre las nuevas tendencias, por lo que siempre estoy informado sobre los últimos avances, con el objetivo de garantizar que la calidad y el alcance de mi trabajo siempre se estên expandiendo.</p>
 				</div>
 			</article>
@@ -49,11 +49,11 @@
 				<h2>Conocimientos Técnicos</h2>
 				<div class="skills content-right">
 					<ul>
-						<li>UX / UI Development</li>
+						<li>React</li>
+						<li>Vue JS</li>
 						<li>Semantic HTML 5</li>
-						<li>CSS 3 / SASS</li>
-						<li>Vanilla Javascript</li>
-						<li>jQuery / jQuery UI</li>
+						<li>CSS 3 / SASS / LESS</li>
+						<li>Vanilla Javascript / ECMAScript</li>
 						<li>Progressive Enhancement</li>
 						<li>DOM / AJAX / JSON</li>
 					</ul>
@@ -62,7 +62,7 @@
 						<li>Responsive Web Design</li>
 						<li>Accessibility / WAI-ARIA</li>
 						<li>APIs</li>
-						<li>Grunt</li>
+						<li>Webpack / Gulp / Grunt</li>
 						<li>Debugging Tools</li>
 						<li>GIT</li>
 					</ul>
@@ -80,9 +80,28 @@
 				<h2>Experiencia</h2>
 				<div class="content-right">
 					<div class="job box-content">
+						<h2>Modus Agency</h2>
+						<h3>UX Engineer</h3>
+						<h4 class="job-date">06/2018-Actual</h4>
+						<ul>
+							<li>Semantic HTML5</li>
+							<li>CSS3 / COMPASS</li>
+							<li>Vanilla JavaScript / ES6</li>
+							<li>Handlebars / Mustache / JADE</li>
+							<li>ReactJS</li>
+							<li>Vue JS</li>
+							<li>MochaJS</li>
+							<li>Frontend Improvements</li>
+							<li>Google Apis</li>
+							<li>Responsive Web Design</li>
+							<li>NodeJS</li>
+							<li>GIT</li>
+						</ul>
+					</div>
+					<div class="job box-content">
 						<h2>R/GA</h2>
 						<h3>Software Engineer, Web Platforms</h3>
-						<h4 class="job-date">08/2016-Actual</h4>
+						<h4 class="job-date">08/2016-05/2018</h4>
 						<ul>
 							<li>Semantic HTML5</li>
 							<li>CSS3 / COMPASS</li>
