--- a/cv/index.html
+++ b/cv/index.html
@@ -18,7 +18,7 @@
 				<img src="images/pic.jpg" alt="Photo" />
 				<div class="content-me">
 					<h1>MATIAS GIMENEZ</h1>
-					<h2>Frontend Developer</h2>
+					<h2>Software Engineer</h2>
 				</div>
 			</div>
 			<div class="contact-info">
@@ -42,7 +42,7 @@
 
 					<p>Since 2010, I have worked as a freelancer, developping sites and applications web meeting tight, high-pressure deadlines while ensuring consistent operation.</p>
 
-					<p>I am also employed of R/GA Buenos Aires in where we work in contact with offices of differents countries developing web-apps for multiple brands.</p>
+					<p>I am currently working at Modus Agency building digital products for US companies. Different technologies depending on the clients' requirements.</p>
 
 					<p>My passion for technology extends far beyond the day-to-day demands of my work: I keep a constant eye on emerging trends in the field, so that I'm always updated on the latest advances, with the goal of ensuring that the quality and scope of my work are always expanding.</p>
 				</div>
@@ -51,11 +51,11 @@
 				<h2>Skills</h2>
 				<div class="skills content-right">
 					<ul>
-						<li>UX / UI Development</li>
+						<li>React</li>
+						<li>Vue JS</li>
 						<li>Semantic HTML 5</li>
-						<li>CSS 3 / SASS</li>
-						<li>Vanilla Javascript</li>
-						<li>jQuery / jQuery UI</li>
+						<li>CSS 3 / SASS / LESS</li>
+						<li>Vanilla Javascript / ECMAScript</li>
 						<li>Progressive Enhancement</li>
 						<li>DOM / AJAX / JSON</li>
 					</ul>
@@ -64,7 +64,7 @@
 						<li>Responsive Web Design</li>
 						<li>Accessibility / WAI-ARIA</li>
 						<li>APIs</li>
-						<li>Grunt</li>
+						<li>Webpack / Gulp / Grunt</li>
 						<li>Debugging Tools</li>
 						<li>GIT</li>
 					</ul>
@@ -82,9 +82,28 @@
 				<h2>Experience</h2>
 				<div class="content-right">
 					<div class="job box-content">
+						<h2>Modus Agency</h2>
+						<h3>UX Engineer</h3>
+						<h4 class="job-date">06/2018-Current</h4>
+						<ul>
+							<li>Semantic HTML5</li>
+							<li>CSS3 / COMPASS</li>
+							<li>Vanilla JavaScript / ES6</li>
+							<li>Handlebars / Mustache / JADE</li>
+							<li>ReactJS</li>
+							<li>Vue JS</li>
+							<li>MochaJS</li>
+							<li>Frontend Improvements</li>
+							<li>Google Apis</li>
+							<li>Responsive Web Design</li>
+							<li>NodeJS</li>
+							<li>GIT</li>
+						</ul>
+					</div>
+					<div class="job box-content">
 						<h2>R/GA</h2>
 						<h3>Software Engineer, Web Platforms</h3>
-						<h4 class="job-date">08/2016-Current</h4>
+						<h4 class="job-date">08/2016-05/2018</h4>
 						<ul>
 							<li>Semantic HTML5</li>
 							<li>CSS3 / COMPASS</li>
